v.0.0.1 - рефакторинг, языковые переменные, настройки

--- a/plg_radicalmicro_content/language/ru-RU/ru-RU.plg_radicalmicro_content.ini
+++ b/plg_radicalmicro_content/language/ru-RU/ru-RU.plg_radicalmicro_content.ini
@@ -2,5 +2,8 @@
 ; PlgRadicalMicroContent language file
 ;
 
-PLG_RADICALFORM_USERMAIL="RadicalMicro - Content"
-PLG_RADICALFORM_USERMAIL_DESCRIPTION="Расширение плагина RadicalMicro для работы со стандартными материалами"
+PLG_RADICALMICRO_CONTENT = "RadicalMicro - Content"
+PLG_RADICALMICRO_CONTENT_DESCRIPTION = "Расширение плагина RadicalMicro для работы со стандартными материалами"
+
+PLG_RADICALMICRO_CONTENT_TYPE = "Тип Schema.org"
+PLG_RADICALMICRO_CONTENT_TYPE_DESC = "Тип Schema.org"
