v.0.0.6 - Плагин для пунктов меню, генерация изображений, рефакторинг

--- a/plg_radicalmicro_content/language/ru-RU/ru-RU.plg_radicalmicro_content.ini
+++ b/plg_radicalmicro_content/language/ru-RU/ru-RU.plg_radicalmicro_content.ini
@@ -2,8 +2,28 @@
 ; PlgRadicalMicroContent language file
 ;
 
-PLG_RADICALMICRO_CONTENT = "RadicalMicro - Content"
+PLG_RADICALMICRO_CONTENT = "RadicalMicro - Материалы"
 PLG_RADICALMICRO_CONTENT_DESCRIPTION = "Расширение плагина RadicalMicro для работы со стандартными материалами"
 
-PLG_RADICALMICRO_CONTENT_TYPE = "Тип Schema.org"
-PLG_RADICALMICRO_CONTENT_TYPE_DESC = "Тип Schema.org"
+; Params
+
+PLG_CONTENT_RADICALMICRO_PARAM_NOTE_DEFAULT = "Общие поля"
+PLG_CONTENT_RADICALMICRO_PARAM_NOTE_DEFAULT_DESC = "Данные поля используются для разметки Schema.org и Meta"
+PLG_CONTENT_RADICALMICRO_PARAM_SPACER_SCHEMA = "Поля Schema.org"
+PLG_CONTENT_RADICALMICRO_PARAM_SPACER_SCHEMA_DESC = "Данные поля используются для разметки Schema.org. Для получения списка полей необходимо выбрать тип Schema.org и сохранить настройки. После чего назначить соответствие появившихся полей."
+PLG_CONTENT_RADICALMICRO_PARAM_TYPE = "Тип Schema.org"
+PLG_CONTENT_RADICALMICRO_PARAM_TITLE = "Заголовок"
+PLG_CONTENT_RADICALMICRO_PARAM_DESCRIPTION = "Описание"
+PLG_CONTENT_RADICALMICRO_PARAM_IMAGE = "Изображение"
+
+; Dynamic params
+
+PLG_RADICALMICRO_PARAM_DATEPUBLISHED = "Дата публикации"
+PLG_RADICALMICRO_PARAM_DATEMODIFIED = "Дата изменения"
+PLG_RADICALMICRO_PARAM_AUTHOR = "Автор"
+
+; Groups
+
+PLG_RADICALMICRO_CONTENT_GROUP_CONTENT = "Материал"
+PLG_RADICALMICRO_CONTENT_GROUP_EXTRA = "Дополнительно"
+PLG_RADICALMICRO_CONTENT_GROUP_FIELDS = "Поля материала"
