--- a/plg_radicalmicro_content/language/ru-RU/ru-RU.plg_radicalmicro_content.sys.ini
+++ b/plg_radicalmicro_content/language/ru-RU/ru-RU.plg_radicalmicro_content.sys.ini
@@ -2,5 +2,5 @@
 ; PlgRadicalMicroContent language file
 ;
 
-PLG_RADICALMICRO_CONTENT = "RadicalMicro - Content"
+PLG_RADICALMICRO_CONTENT = "RadicalMicro - Материалы"
 PLG_RADICALMICRO_CONTENT_DESCRIPTION = "Расширение плагина RadicalMicro для работы со стандартными материалами"
