--- a/plg_system_radicalmicro_yootheme/language/ru-RU/ru-RU.plg_system_radicalmicro_yootheme.ini
+++ b/plg_system_radicalmicro_yootheme/language/ru-RU/ru-RU.plg_system_radicalmicro_yootheme.ini
@@ -1,9 +1,9 @@
 ;
-; PlgSystemRadicalMicro Yootheme language file
+; PlgSystemRadicalMicro YOOtheme language file
 ;
 
-PLG_SYSTEM_RADICALMICRO_YOOTHEME = "Система - RadicalMicro - Yootheme Pro"
-PLG_SYSTEM_RADICALMICRO_YOOTHEME_DESCRIPTION = "<p>RadicalMicro Yootheme Pro - плагин микроразметки RadicalMicro для Yootheme Pro.</p>"
+PLG_SYSTEM_RADICALMICRO_YOOTHEME = "Система - RadicalMicro - YOOtheme Pro"
+PLG_SYSTEM_RADICALMICRO_YOOTHEME_DESCRIPTION = "<p>RadicalMicro YOOtheme Pro - плагин микроразметки RadicalMicro для YOOtheme Pro.</p>"
 
 PLG_SYSTEM_RADICALMICRO_COMPATIBLE_PHP = "Данная версия совместима только с PHP %s и более поздними версиями"
 PLG_SYSTEM_RADICALMICRO_COMPATIBLE_JOOMLA = "Данная версия совместима только с Joomla %s и более поздними версиями"
