v.0.0.7 - Плагин для генерации изображений, проверка существующих разметок, языковые переменные, рефакторинг

--- a/plg_radicalmicro_content/language/ru-RU/ru-RU.plg_radicalmicro_content.sys.ini
+++ b/plg_radicalmicro_content/language/ru-RU/ru-RU.plg_radicalmicro_content.sys.ini
@@ -1,6 +1,9 @@
-;
-; PlgRadicalMicroContent language file
-;
+; @package   pkg_radicalmicro
+; @version   1.0.0
+; @author    Dmitriy Vasyukov - https://fictionlabs.ru
+; @copyright Copyright (c) 2022 Fictionlabs. All rights reserved.
+; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
+; @link      https://fictionlabs.ru/
 
 PLG_RADICALMICRO_CONTENT = "RadicalMicro - Материалы"
 PLG_RADICALMICRO_CONTENT_DESCRIPTION = "Расширение плагина RadicalMicro для работы со стандартными материалами"
