--- a/plg_radicalmicro_image/language/ru-RU/ru-RU.plg_radicalmicro_image.sys.ini
+++ b/plg_radicalmicro_image/language/ru-RU/ru-RU.plg_radicalmicro_image.sys.ini
@@ -5,5 +5,5 @@
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
 ; @link      https://fictionlabs.ru/
 
-PLG_SYSTEM_RADICALMICRO = "Система - RadicalMicro"
-PLG_SYSTEM_RADICALMICRO_DESCRIPTION = "<p>RadicalMicro - универсальный плагин микроразметки.</p>"
+PLG_RADICALMICRO_IMAGE = "RadicalMicro - Изображение"
+PLG_RADICALMICRO_IMAGE_DESCRIPTION = "Расширение плагина RadicalMicro для подстановки или генерации изображений"
