--- a/plg_system_radicalmicro/language/ru-RU/ru-RU.plg_system_radicalmicro.ini
+++ b/plg_system_radicalmicro/language/ru-RU/ru-RU.plg_system_radicalmicro.ini
@@ -1,73 +1,57 @@
-;
-; PlgSystemRadicalMicro language file
-;
+; @package   pkg_radicalmicro
+; @version   1.0.0
+; @author    Dmitriy Vasyukov - https://fictionlabs.ru
+; @copyright Copyright (c) 2022 Fictionlabs. All rights reserved.
+; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
+; @link      https://fictionlabs.ru/
 
 PLG_SYSTEM_RADICALMICRO = "Система - RadicalMicro"
 PLG_SYSTEM_RADICALMICRO_DESCRIPTION = "<p>RadicalMicro - универсальный плагин микроразметки.</p>"
 
-PLG_SYSTEM_RADICALMICRO_COMPATIBLE_PHP = "Данная версия совместима только с PHP %s и более поздними версиями"
-PLG_SYSTEM_RADICALMICRO_COMPATIBLE_JOOMLA = "Данная версия совместима только с Joomla %s и более поздними версиями"
-
-# Fieldsets
+; Fieldsets
 
 COM_PLUGINS_SCHEMA_FIELDSET_LABEL = "Schema.org"
 COM_PLUGINS_META_FIELDSET_LABEL = "Meta"
+COM_PLUGINS_EXTRA_FIELDSET_LABEL = "Дополнительно"
 
-# Basic
+; Basic
 
 PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA = "Schema.org"
 PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_DESC = "Включить добавление разметки Schema.org"
 PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_META = "Meta"
 PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_META_DESC = "Включить добавление мета тегов"
 
-# Schema
+; Schema
 
-PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_TYPE_WEBSITE = "Добавить разметку Website"
+PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_TYPE_WEBSITE = "Разметка Website"
 PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_TYPE_WEBSITE_DESC = "Добавить разметку Schema.org типа Website в дополнение к существующим разметкам"
-PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_TYPE_LOGO = "Добавить разметку Logo"
-PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_TYPE_LOGO_DESC = "Добавить разметку Schema.org типа Logo в дополнение к существующим разметкам"
-PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_LOGO_IMAGE = "Логотип"
-PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_LOGO_IMAGE_DESC = "Логотип для разметки типа Logo"
+PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_TYPE_ORGANIZATION = "Разметка Organization"
+PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_TYPE_ORGANIZATION_DESC = "Добавить разметку Schema.org типа Organization в дополнение к существующим разметкам"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_IMAGE = "Логотип"
+PLG_SYSTEM_RADICALMICRO_PARAM_SCHEMA_TYPE_ORGANIZATION_IMAGE_DESC = "Логотип для разметки типа Organization"
+PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_TYPE_BREADCRUMBLIST = "Разметка Breadcrumb List"
+PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_TYPE_BREADCRUMBLIST_DESC = "Добавить разметку Schema.org типа Breadcrumb List в дополнение к существующим разметкам"
+PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_TYPE_PAGE = "Основная разметка"
+PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_SCHEMA_TYPE_PAGE_DESC = "Добавить основную разметку страницы в дополнение к существующим разметкам"
 
-# Opengraph
+; Opengraph
 
-PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_OPENGRAPH = "Добавить разметку Open Graph"
-PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_OPENGRAPH_DESC = "Добавить разметку Open Graph к существующим разметкам"
-PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_TWITTER = "Добавить разметку Twitter"
-PLG_SYSTEM_RADICALMICRO_PARAM_ENABLE_TWITTER_DESC = "Добавить разметку Twitter в дополнение к существующим разметкам"
-PLG_SYSTEM_RADICALMICRO_PARAM_SPACER_DEFAULT = "Настройки по умолчанию"
-PLG_SYSTEM_RADICALMICRO_PARAM_SITE_NAME = "Название сайта"
-PLG_SYSTEM_RADICALMICRO_PARAM_SITE_DESCRIPTION = "Описание сайта"
+PLG_RADICALMICRO_PARAM_META_ENABLE_OG = "Разметка OpenGraph"
+PLG_RADICALMICRO_PARAM_META_ENABLE_DESC = "Добавить разметку OpenGraph к существующим разметкам"
+PLG_RADICALMICRO_PARAM_META_ENABLE_TWITTER = "Разметка Twitter"
+PLG_RADICALMICRO_PARAM_META_ENABLE_TWITTER_DESC = "Добавить разметку Twitter в дополнение к существующим разметкам"
 
-; Opengraph image
-
-PLG_SYSTEM_RADICALMICRO_PARAM_SPACER_IMAGE = "Настройки изображения"
-PLG_SYSTEM_RADICALMICRO_PARAM_IMAGEFIXSIZE = "Фиксированный размер изображения"
-PLG_SYSTEM_RADICALMICRO_PARAM_IMAGEFIXSIZE_WIDTH = "Ширина"
-PLG_SYSTEM_RADICALMICRO_PARAM_IMAGEFIXSIZE_HEIGHT = "Высота"
-PLG_SYSTEM_RADICALMICRO_PARAM_IMAGETYPE = "Тип изображения"
-PLG_SYSTEM_RADICALMICRO_PARAM_IMAGETYPE_IMAGE = "Статичное"
-PLG_SYSTEM_RADICALMICRO_PARAM_IMAGETYPE_GENERATE = "Сгенерированное"
-PLG_SYSTEM_RADICALMICRO_PARAM_IMAGETYPE_IMAGE_IMAGE = "Статичное изображение"
-PLG_SYSTEM_RADICALMICRO_PARAM_IMAGETYPE_GENERATE_CACHE = "Папка изображений"
-PLG_SYSTEM_RADICALMICRO_PARAM_IMAGETYPE_GENERATE_CACHE_IMAGES = "Images"
-PLG_SYSTEM_RADICALMICRO_PARAM_IMAGETYPE_GENERATE_CACHE_CACHE = "Cache"
-PLG_SYSTEM_RADICALMICRO_PARAM_IMAGETYPE_GENERATE_CACHE_SUBFOLDER = "Добавить подпапки"
-PLG_SYSTEM_RADICALMICRO_PARAM_IMAGETYPE_GENERATE_CACHE_SUBFOLDER_DESC = "Добавить подпапки в папку кеша изображения для уменьшения нагрузки на сервер при большом количестве сгенерированных изображений"
-PLG_SYSTEM_RADICALMICRO_PARAM_IMAGETYPE_GENERATE_IMAGE_FOR_ERROR = "Стандартное изображение"
-PLG_SYSTEM_RADICALMICRO_PARAM_IMAGETYPE_GENERATE_BACKGROUND = "Фон изображения"
-PLG_SYSTEM_RADICALMICRO_PARAM_IMAGETYPE_GENERATE_BACKGROUND_COLOR = "Цвет фона"
-PLG_SYSTEM_RADICALMICRO_PARAM_IMAGETYPE_GENERATE_BACKGROUND_FILL = "Заливка"
-PLG_SYSTEM_RADICALMICRO_PARAM_IMAGETYPE_GENERATE_BACKGROUND_STATIC = "Изображение"
-PLG_SYSTEM_RADICALMICRO_PARAM_IMAGETYPE_GENERATE_BACKGROUND_IMAGE = "Изображение фона"
-PLG_SYSTEM_RADICALMICRO_PARAM_IMAGETYPE_GENERATE_BACKGROUND_TEXT_BACKGROUND = "Цвет фона для текста"
-PLG_SYSTEM_RADICALMICRO_PARAM_IMAGETYPE_GENERATE_BACKGROUND_TEXT_COLOR = "Цвет текста"
-PLG_SYSTEM_RADICALMICRO_PARAM_IMAGETYPE_GENERATE_BACKGROUND_TEXT_FONT = "Шрифт (ttf)"
-PLG_SYSTEM_RADICALMICRO_PARAM_IMAGETYPE_GENERATE_BACKGROUND_TEXT_FONT_SIZE = "Размер шрифта"
-PLG_SYSTEM_RADICALMICRO_PARAM_IMAGETYPE_GENERATE_BACKGROUND_TEXT_MARGIN = "Отступ фона текста от фона картинки"
-PLG_SYSTEM_RADICALMICRO_PARAM_IMAGETYPE_GENERATE_BACKGROUND_TEXT_PADDING = "Отступ текста от фона"
-
-# Other
+; Other
 
 PLG_SYSTEM_RADICALMICRO_PLUGIN_DISABLED = "Включите плагин Radical Micro для продолжения работы"
 PLG_SYSTEM_RADICALMICRO_NO_USER = "Автор неизвестен"
+PLG_SYSTEM_RADICALMICRO_BREADCRUMBS_HOME = "Главная"
+
+; Extra
+
+PLG_SYSTEM_RADICALMICRO_PARAM_EXTRA_CHECK_CURRENT = "Проверка разметки"
+PLG_SYSTEM_RADICALMICRO_PARAM_EXTRA_CHECK_CURRENT_DESC = "Если выбрано Да, то плагин не будет встраивать разметку, если разметка такого же типа уже есть на странице."
+PLG_SYSTEM_RADICALMICRO_PARAM_EXTRA_INSERT_PLACE = "Место вставки"
+PLG_SYSTEM_RADICALMICRO_PARAM_EXTRA_INSERT_PLACE_DESC = "Место вставки разметки Schema.org и Meta. При выборе Head - разметка будет вставлена перед закрывающимся тегом <head>, при выборе Body - перед закрывающимся тегом <body>."
+PLG_SYSTEM_RADICALMICRO_PARAM_EXTRA_INSERT_PLACE_HEAD = "Head"
+PLG_SYSTEM_RADICALMICRO_PARAM_EXTRA_INSERT_PLACE_BODY = "Body"
