--- a/plg_system_radicalmicro_yootheme/language/ru-RU/ru-RU.plg_system_radicalmicro_yootheme.ini
+++ b/plg_system_radicalmicro_yootheme/language/ru-RU/ru-RU.plg_system_radicalmicro_yootheme.ini
@@ -1,14 +1,14 @@
-;
-; PlgSystemRadicalMicro YOOtheme language file
-;
+; @package   pkg_radicalmicro
+; @version   1.0.0
+; @author    Dmitriy Vasyukov - https://fictionlabs.ru
+; @copyright Copyright (c) 2022 Fictionlabs. All rights reserved.
+; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
+; @link      https://fictionlabs.ru/
 
 PLG_SYSTEM_RADICALMICRO_YOOTHEME = "Система - RadicalMicro - YOOtheme Pro"
 PLG_SYSTEM_RADICALMICRO_YOOTHEME_DESCRIPTION = "<p>RadicalMicro YOOtheme Pro - плагин микроразметки RadicalMicro для YOOtheme Pro.</p>"
 
-PLG_SYSTEM_RADICALMICRO_COMPATIBLE_PHP = "Данная версия совместима только с PHP %s и более поздними версиями"
-PLG_SYSTEM_RADICALMICRO_COMPATIBLE_JOOMLA = "Данная версия совместима только с Joomla %s и более поздними версиями"
-
-# Text
+; Text
 
 PLG_SYSTEM_RADICALMICRO_YOOTHEME_TYPE = "Тип"
 PLG_SYSTEM_RADICALMICRO_YOOTHEME_SETTINGS = "Настройки"
