--- a/plg_system_radicalmicro_yootheme/language/ru-RU/ru-RU.plg_system_radicalmicro_yootheme.sys.ini
+++ b/plg_system_radicalmicro_yootheme/language/ru-RU/ru-RU.plg_system_radicalmicro_yootheme.sys.ini
@@ -1,6 +1,9 @@
-;
-; PlgSystemRadicalMicro Yootheme language file
-;
+; @package   pkg_radicalmicro
+; @version   1.0.0
+; @author    Dmitriy Vasyukov - https://fictionlabs.ru
+; @copyright Copyright (c) 2022 Fictionlabs. All rights reserved.
+; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
+; @link      https://fictionlabs.ru/
 
 PLG_SYSTEM_RADICALMICRO_YOOTHEME = "Система - RadicalMicro - Yootheme Pro"
 PLG_SYSTEM_RADICALMICRO_YOOTHEME_DESCRIPTION = "<p>RadicalMicro Yootheme Pro - плагин микроразметки RadicalMicro для Yootheme Pro.</p>"
