--- a/plg_radicalmicro_content/language/en-GB/en-GB.plg_radicalmicro_content.sys.ini
+++ b/plg_radicalmicro_content/language/en-GB/en-GB.plg_radicalmicro_content.sys.ini
@@ -1,5 +1,8 @@
-;
-; PlgRadicalMicroContent language file
-;
+; @package   pkg_radicalmicro
+; @version   1.0.0
+; @author    Dmitriy Vasyukov - https://fictionlabs.ru
+; @copyright Copyright (c) 2022 Fictionlabs. All rights reserved.
+; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
+; @link      https://fictionlabs.ru/
 
 ; Coming soon
