--- a/plg_radicalmicro_content/language/ru-RU/ru-RU.plg_radicalmicro_content.ini
+++ b/plg_radicalmicro_content/language/ru-RU/ru-RU.plg_radicalmicro_content.ini
@@ -1,29 +1,39 @@
-;
-; PlgRadicalMicroContent language file
-;
+; @package   pkg_radicalmicro
+; @version   1.0.0
+; @author    Dmitriy Vasyukov - https://fictionlabs.ru
+; @copyright Copyright (c) 2022 Fictionlabs. All rights reserved.
+; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
+; @link      https://fictionlabs.ru/
 
 PLG_RADICALMICRO_CONTENT = "RadicalMicro - Материалы"
 PLG_RADICALMICRO_CONTENT_DESCRIPTION = "Расширение плагина RadicalMicro для работы со стандартными материалами"
 
 ; Params
 
-PLG_CONTENT_RADICALMICRO_PARAM_NOTE_DEFAULT = "Общие поля"
-PLG_CONTENT_RADICALMICRO_PARAM_NOTE_DEFAULT_DESC = "Данные поля используются для разметки Schema.org и Meta"
 PLG_CONTENT_RADICALMICRO_PARAM_SPACER_SCHEMA = "Поля Schema.org"
 PLG_CONTENT_RADICALMICRO_PARAM_SPACER_SCHEMA_DESC = "Данные поля используются для разметки Schema.org. Для получения списка полей необходимо выбрать тип Schema.org и сохранить настройки. После чего назначить соответствие появившихся полей."
+PLG_CONTENT_RADICALMICRO_PARAM_SPACER_META = "Поля Meta"
+PLG_CONTENT_RADICALMICRO_PARAM_SPACER_META_DESC = "Данные поля используются для разметки Meta. Назначьте соответствие полей и заполните необходимые поля."
 PLG_CONTENT_RADICALMICRO_PARAM_TYPE = "Тип Schema.org"
-PLG_CONTENT_RADICALMICRO_PARAM_TITLE = "Заголовок"
-PLG_CONTENT_RADICALMICRO_PARAM_DESCRIPTION = "Описание"
-PLG_CONTENT_RADICALMICRO_PARAM_IMAGE = "Изображение"
 
 ; Dynamic params
 
-PLG_RADICALMICRO_PARAM_DATEPUBLISHED = "Дата публикации"
-PLG_RADICALMICRO_PARAM_DATEMODIFIED = "Дата изменения"
-PLG_RADICALMICRO_PARAM_AUTHOR = "Автор"
+PLG_RADICALMICRO_PARAM_SCHEMA_TITLE = "Заголовок"
+PLG_RADICALMICRO_PARAM_SCHEMA_DESCRIPTION = "Описание"
+PLG_RADICALMICRO_PARAM_SCHEMA_IMAGE = "Изображение"
+PLG_RADICALMICRO_PARAM_SCHEMA_DATEPUBLISHED = "Дата публикации"
+PLG_RADICALMICRO_PARAM_SCHEMA_DATEMODIFIED = "Дата изменения"
+PLG_RADICALMICRO_PARAM_SCHEMA_AUTHOR = "Автор"
+
+PLG_RADICALMICRO_PARAM_META_TITLE = "Заголовок"
+PLG_RADICALMICRO_PARAM_META_DESCRIPTION = "Описание"
+PLG_RADICALMICRO_PARAM_META_IMAGE = "Изображение"
+PLG_RADICALMICRO_PARAM_META_TYPE = "Тип контента"
+PLG_RADICALMICRO_PARAM_META_SITE = "Адрес сайта"
 
 ; Groups
 
 PLG_RADICALMICRO_CONTENT_GROUP_CONTENT = "Материал"
 PLG_RADICALMICRO_CONTENT_GROUP_EXTRA = "Дополнительно"
+PLG_RADICALMICRO_CONTENT_GROUP_EXTRA_OPTION_NO_SELECT = "Не выбрано"
 PLG_RADICALMICRO_CONTENT_GROUP_FIELDS = "Поля материала"
