v.0.0.8 - Установочные скрипты, фиксы

--- a/plg_system_radicalmicro_yootheme/language/ru-RU/ru-RU.plg_system_radicalmicro_yootheme.sys.ini
+++ b/plg_system_radicalmicro_yootheme/language/ru-RU/ru-RU.plg_system_radicalmicro_yootheme.sys.ini
@@ -5,5 +5,5 @@
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
 ; @link      https://fictionlabs.ru/
 
-PLG_SYSTEM_RADICALMICRO_YOOTHEME = "Система - RadicalMicro - Yootheme Pro"
-PLG_SYSTEM_RADICALMICRO_YOOTHEME_DESCRIPTION = "<p>RadicalMicro Yootheme Pro - плагин микроразметки RadicalMicro для Yootheme Pro.</p>"
+PLG_SYSTEM_RADICALMICRO_YOOTHEME = "Система - Radical Micro - YOOtheme Pro"
+PLG_SYSTEM_RADICALMICRO_YOOTHEME_DESCRIPTION = "<p>Radical Micro YOOtheme Pro - плагин микроразметки RadicalMicro для Yootheme Pro.</p>"
