--- a/language/ru-RU/ru-RU.pkg_radicalmicro.sys.ini
+++ b/language/ru-RU/ru-RU.pkg_radicalmicro.sys.ini
@@ -6,7 +6,7 @@
 ; @link      https://fictionlabs.ru/
 
 PKG_RADICALMICRO = "RadicalMicro"
-PKG_RADICALMICRO_DESCRIPTION = "RadicalMicro - решение, позволяющее добавить микроразметку и метаданные Вашему сайту."
+PKG_RADICALMICRO_DESCRIPTION = "RadicalMicro - решение, позволяющее добавить микроразметку и метаданные."
 
 PKG_RADICALMICRO_ERROR_COMPATIBLE_PHP = "Данная версия совместима только с PHP %s и более поздними версиями."
 PKG_RADICALMICRO_ERROR_COMPATIBLE_JOOMLA = "Данная версия совместима только с Joomla %s и более поздними версиями."
