v.0.0.9 - Плагин данных по умолчанию, разметки Product и Recipe, переводы, рефакторинг

--- a/plg_radicalmicro_content/language/ru-RU/ru-RU.plg_radicalmicro_content.ini
+++ b/plg_radicalmicro_content/language/ru-RU/ru-RU.plg_radicalmicro_content.ini
@@ -25,6 +25,28 @@ PLG_RADICALMICRO_PARAM_SCHEMA_DATEPUBLISHED = "Дата публикации"
 PLG_RADICALMICRO_PARAM_SCHEMA_DATEMODIFIED = "Дата изменения"
 PLG_RADICALMICRO_PARAM_SCHEMA_AUTHOR = "Автор"
 
+; Product
+
+PLG_RADICALMICRO_PARAM_SCHEMA_SKU = "Артикул"
+PLG_RADICALMICRO_PARAM_SCHEMA_MPN = "Код производителя"
+PLG_RADICALMICRO_PARAM_SCHEMA_BRAND = "Производитель"
+PLG_RADICALMICRO_PARAM_SCHEMA_PRICE = "Цена"
+PLG_RADICALMICRO_PARAM_SCHEMA_CURRENCY = "Валюта"
+
+; Recipe
+
+PLG_RADICALMICRO_PARAM_SCHEMA_PREPTIME = "Время подготовки, мин."
+PLG_RADICALMICRO_PARAM_SCHEMA_COOKTIME = "Время приготовление, мин."
+PLG_RADICALMICRO_PARAM_SCHEMA_TOTALTIME = "Общее время, мин."
+PLG_RADICALMICRO_PARAM_SCHEMA_CALORIES = "Количество калорий"
+PLG_RADICALMICRO_PARAM_SCHEMA_RECIPECATEGORY = "Вид блюда"
+PLG_RADICALMICRO_PARAM_SCHEMA_RECIPEYIELD = "Количество порций"
+PLG_RADICALMICRO_PARAM_SCHEMA_RECIPECUISINE = "Вид кухни мира"
+PLG_RADICALMICRO_PARAM_SCHEMA_RECIPEINSTRUCTIONS = "Инструкция"
+PLG_RADICALMICRO_PARAM_SCHEMA_RECIPEINGREDIENT = "Ингредиенты"
+
+; Meta
+
 PLG_RADICALMICRO_PARAM_META_TITLE = "Заголовок"
 PLG_RADICALMICRO_PARAM_META_DESCRIPTION = "Описание"
 PLG_RADICALMICRO_PARAM_META_IMAGE = "Изображение"
