--- a/plg_radicalmicro_default/language/en-GB/en-GB.plg_radicalmicro_default.ini
+++ b/plg_radicalmicro_default/language/en-GB/en-GB.plg_radicalmicro_default.ini
@@ -5,5 +5,4 @@
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
 ; @link      https://fictionlabs.ru/
 
-PLG_RADICALMICRO_IMAGE = "Radical Micro - Генерация изображения"
-PLG_RADICALMICRO_IMAGE_DESCRIPTION = "Расширение плагина Radical Micro для генерации изображения"
+; Coming soon
