--- a/plg_radicalmicro_image/language/ru-RU/ru-RU.plg_radicalmicro_image.ini
+++ b/plg_radicalmicro_image/language/ru-RU/ru-RU.plg_radicalmicro_image.ini
@@ -5,8 +5,8 @@
 ; @license   GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
 ; @link      https://fictionlabs.ru/
 
-PLG_RADICALMICRO_IMAGE = "Radical Micro - Изображение"
-PLG_RADICALMICRO_IMAGE_DESCRIPTION = "Расширение плагина Radical Micro для подстановки или генерации изображений"
+PLG_RADICALMICRO_IMAGE = "Radical Micro - Генерация изображения"
+PLG_RADICALMICRO_IMAGE_DESCRIPTION = "Расширение плагина Radical Micro для генерации изображения"
 
 ; Params
 
@@ -14,17 +14,14 @@ PLG_RADICALMICRO_IMAGE_PARAM_SPACER_IMAGE = "Настройки изображе
 PLG_RADICALMICRO_IMAGE_PARAM_IMAGEFIXSIZE = "Фиксированный размер изображения"
 PLG_RADICALMICRO_IMAGE_PARAM_IMAGEFIXSIZE_WIDTH = "Ширина"
 PLG_RADICALMICRO_IMAGE_PARAM_IMAGEFIXSIZE_HEIGHT = "Высота"
-PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE = "Тип изображения"
-PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_IMAGE = "Статичное"
-PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE = "Сгенерированное"
-PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_IMAGE_IMAGE = "Статичное изображение"
 PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE_CACHE = "Папка изображений"
 PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE_CACHE_DESC = "Выбрать папку, где будут храниться сгенерированные изображения. Разница состоит в том, что папку Cache можно очистить из административной части сайта вместе со всем кешем."
 PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE_CACHE_IMAGES = "Images"
 PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE_CACHE_CACHE = "Cache"
 PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE_CACHE_SUBFOLDER = "Добавить подпапки"
 PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE_CACHE_SUBFOLDER_DESC = "Добавить подпапки в папку кеша изображения для уменьшения нагрузки на сервер при большом количестве сгенерированных изображений"
-PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE_IMAGE_FOR_ERROR = "Стандартное изображение"
+PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE_IMAGE_FOR_ERROR = "По умолчанию"
+PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE_IMAGE_FOR_ERROR_DESC = "Изображение по умолчанию будет показано, когда по какой-либо причине изображение не было сгенерировано"
 PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE_BACKGROUND = "Фон изображения"
 PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE_BACKGROUND_COLOR = "Цвет фона"
 PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE_BACKGROUND_FILL = "Заливка"
