--- a/plg_radicalmicro_menu/language/ru-RU/ru-RU.plg_radicalmicro_menu.ini
+++ b/plg_radicalmicro_menu/language/ru-RU/ru-RU.plg_radicalmicro_menu.ini
@@ -8,13 +8,49 @@ PLG_RADICALMICRO_MENU_DESCRIPTION = "Расширение плагина Radical
 ; Params
 
 PLG_RADICALMICRO_MENU_PARAM_ENABLE = "Включить"
-PLG_RADICALMICRO_MENU_PARAM_ENABLE_DESC = "Включив опцию, Вы можете переопределить метаданные, которые поступают от плагинов-провайдеров. Приоритет у пунктов меню выше, чем у плагинов-провайдеров."
-PLG_RADICALMICRO_PARAM_RADICALMICRO_MENU_TITLE = "Заголовок"
-PLG_RADICALMICRO_PARAM_RADICALMICRO_MENU_DESCRIPTION = "Описание"
-PLG_RADICALMICRO_PARAM_RADICALMICRO_MENU_IMAGE = "Изображение"
-PLG_RADICALMICRO_PARAM_RADICALMICRO_MENU_TYPE = "Тип "
-PLG_RADICALMICRO_PARAM_RADICALMICRO_MENU_SITE = "Сайт"
+PLG_RADICALMICRO_MENU_PARAM_ENABLE_DESC = "Включив опцию, Вы можете переопределить данные, которые поступают от плагинов-провайдеров. Приоритет у пунктов меню выше, чем у плагинов-провайдеров."
+
+; Meta
+
+PLG_RADICALMICRO_PARAM_RADICALMICRO_META_MENU_TITLE = "Заголовок"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_META_MENU_DESCRIPTION = "Описание"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_META_MENU_IMAGE = "Изображение"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_META_MENU_TYPE = "Тип "
+PLG_RADICALMICRO_PARAM_RADICALMICRO_META_MENU_SITE = "Сайт"
+
+; Schema
+
+PLG_RADICALMICRO_MENU_PARAM_SCHEMA_SPACER = "Поля Schema.org"
+PLG_RADICALMICRO_MENU_PARAM_SCHEMA_SPACER_DESC = "Данные поля используются для разметки Schema.org. Для получения списка полей необходимо выбрать тип Schema.org и сохранить настройки. После чего заполнить соответствующие поля."
+PLG_RADICALMICRO_MENU_PARAM_SCHEMA_TYPE = "Тип Schema.org"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_TITLE = "Заголовок"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_DESCRIPTION = "Описание"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_IMAGE = "Изображение"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_DATEPUBLISHED = "Дата публикации"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_DATEMODIFIED = "Дата изменения"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_AUTHOR = "Автор"
+
+; Product
+
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_SKU = "Артикул"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_MPN = "Код производителя"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_BRAND = "Производитель"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_PRICE = "Цена"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_CURRENCY = "Валюта"
+
+; Recipe
+
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_PREPTIME = "Время подготовки, мин."
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_COOKTIME = "Время приготовление, мин."
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_TOTALTIME = "Общее время, мин."
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_CALORIES = "Количество калорий"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_RECIPECATEGORY = "Вид блюда"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_RECIPEYIELD = "Количество порций"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_RECIPECUISINE = "Вид кухни мира"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_RECIPEINSTRUCTIONS = "Инструкция"
+PLG_RADICALMICRO_PARAM_RADICALMICRO_SCHEMA_MENU_RECIPEINGREDIENT = "Ингредиенты"
 
 ; Other
 
-COM_MENUS_RADICALMICRO_FIELDSET_LABEL = "RadicalMicro - Meta"
+COM_MENUS_RADICALMICRO_META_FIELDSET_LABEL = "RadicalMicro - Meta"
+COM_MENUS_RADICALMICRO_SCHEMA_FIELDSET_LABEL = "RadicalMicro - Schema.org"
