v.0.1.0 - Настройки генерации изображений, фиксы

--- a/plg_radicalmicro_image/language/ru-RU/ru-RU.plg_radicalmicro_image.ini
+++ b/plg_radicalmicro_image/language/ru-RU/ru-RU.plg_radicalmicro_image.ini
@@ -14,25 +14,29 @@ PLG_RADICALMICRO_IMAGE_PARAM_SPACER_IMAGE = "Настройки изображе
 PLG_RADICALMICRO_IMAGE_PARAM_IMAGEFIXSIZE = "Фиксированный размер изображения"
 PLG_RADICALMICRO_IMAGE_PARAM_IMAGEFIXSIZE_WIDTH = "Ширина"
 PLG_RADICALMICRO_IMAGE_PARAM_IMAGEFIXSIZE_HEIGHT = "Высота"
-PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE_CACHE = "Папка изображений"
-PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE_CACHE_DESC = "Выбрать папку, где будут храниться сгенерированные изображения. Разница состоит в том, что папку Cache можно очистить из административной части сайта вместе со всем кешем."
-PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE_CACHE_IMAGES = "Images"
-PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE_CACHE_CACHE = "Cache"
-PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE_CACHE_SUBFOLDER = "Добавить подпапки"
-PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE_CACHE_SUBFOLDER_DESC = "Добавить подпапки в папку кеша изображения для уменьшения нагрузки на сервер при большом количестве сгенерированных изображений"
-PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE_IMAGE_FOR_ERROR = "По умолчанию"
-PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE_IMAGE_FOR_ERROR_DESC = "Изображение по умолчанию будет показано, когда по какой-либо причине изображение не было сгенерировано"
-PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE_BACKGROUND = "Фон изображения"
-PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE_BACKGROUND_COLOR = "Цвет фона"
-PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE_BACKGROUND_FILL = "Заливка"
-PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE_BACKGROUND_WIDTH = "Ширина изображения"
-PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE_BACKGROUND_HEIGHT = "Высота изображения"
-PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE_BACKGROUND_STATIC = "Изображение"
-PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE_BACKGROUND_IMAGE = "Изображение фона"
-PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE_BACKGROUND_TEXT_BACKGROUND = "Цвет фона для текста"
-PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE_BACKGROUND_TEXT_COLOR = "Цвет текста"
-PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE_BACKGROUND_TEXT_FONT = "Шрифт (ttf)"
-PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE_BACKGROUND_TEXT_FONT_DESC = "Путь к файлу ttf для переопределения стандартного шрифта"
-PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE_BACKGROUND_TEXT_FONT_SIZE = "Размер шрифта"
-PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE_BACKGROUND_TEXT_MARGIN = "Отступ фона текста от фона картинки"
-PLG_RADICALMICRO_IMAGE_PARAM_IMAGETYPE_GENERATE_BACKGROUND_TEXT_PADDING = "Отступ текста от фона"
+PLG_RADICALMICRO_IMAGE_PARAM_POSITION = "Расположение заголовка"
+PLG_RADICALMICRO_IMAGE_PARAM_POSITION_TOP = "Верх"
+PLG_RADICALMICRO_IMAGE_PARAM_POSITION_MIDDLE = "Середина"
+PLG_RADICALMICRO_IMAGE_PARAM_POSITION_BOTTOM = "Низ"
+PLG_RADICALMICRO_IMAGE_PARAM_CACHE = "Папка изображений"
+PLG_RADICALMICRO_IMAGE_PARAM_CACHE_DESC = "Выбрать папку, где будут храниться сгенерированные изображения. Разница состоит в том, что папку Cache можно очистить из административной части сайта вместе со всем кешем."
+PLG_RADICALMICRO_IMAGE_PARAM_CACHE_IMAGES = "Images"
+PLG_RADICALMICRO_IMAGE_PARAM_CACHE_CACHE = "Cache"
+PLG_RADICALMICRO_IMAGE_PARAM_CACHE_SUBFOLDER = "Добавить подпапки"
+PLG_RADICALMICRO_IMAGE_PARAM_CACHE_SUBFOLDER_DESC = "Добавить подпапки в папку кеша изображения для уменьшения нагрузки на сервер при большом количестве сгенерированных изображений"
+PLG_RADICALMICRO_IMAGE_PARAM_IMAGE_FOR_ERROR = "По умолчанию"
+PLG_RADICALMICRO_IMAGE_PARAM_IMAGE_FOR_ERROR_DESC = "Изображение по умолчанию будет показано, когда по какой-либо причине изображение не было сгенерировано"
+PLG_RADICALMICRO_IMAGE_PARAM_BACKGROUND = "Фон изображения"
+PLG_RADICALMICRO_IMAGE_PARAM_BACKGROUND_COLOR = "Цвет фона"
+PLG_RADICALMICRO_IMAGE_PARAM_BACKGROUND_FILL = "Заливка"
+PLG_RADICALMICRO_IMAGE_PARAM_BACKGROUND_WIDTH = "Ширина изображения"
+PLG_RADICALMICRO_IMAGE_PARAM_BACKGROUND_HEIGHT = "Высота изображения"
+PLG_RADICALMICRO_IMAGE_PARAM_BACKGROUND_STATIC = "Изображение"
+PLG_RADICALMICRO_IMAGE_PARAM_BACKGROUND_IMAGE = "Изображение фона"
+PLG_RADICALMICRO_IMAGE_PARAM_BACKGROUND_TEXT_BACKGROUND = "Цвет фона для текста"
+PLG_RADICALMICRO_IMAGE_PARAM_BACKGROUND_TEXT_COLOR = "Цвет текста"
+PLG_RADICALMICRO_IMAGE_PARAM_BACKGROUND_TEXT_FONT = "Шрифт (ttf)"
+PLG_RADICALMICRO_IMAGE_PARAM_BACKGROUND_TEXT_FONT_DESC = "Путь к файлу ttf для переопределения стандартного шрифта"
+PLG_RADICALMICRO_IMAGE_PARAM_BACKGROUND_TEXT_FONT_SIZE = "Размер шрифта"
+PLG_RADICALMICRO_IMAGE_PARAM_BACKGROUND_TEXT_MARGIN = "Внешний отступ блока текста (margin)"
+PLG_RADICALMICRO_IMAGE_PARAM_BACKGROUND_TEXT_PADDING = "Внутренний отступ блока текста (padding)"
