--- a/plg_radicalmicro_default/language/ru-RU/ru-RU.plg_radicalmicro_default.sys.ini
+++ b/plg_radicalmicro_default/language/ru-RU/ru-RU.plg_radicalmicro_default.sys.ini
@@ -6,4 +6,4 @@
 ; @link      https://fictionlabs.ru/
 
 PLG_RADICALMICRO_DEFAULT = "Radical Micro - Значения по умолчанию"
-PLG_RADICALMICRO_DEFAULT_DESCRIPTION = "Расширение плагина Radical Micro для установки значений части метаданных по умолчанию.<br/> Плагин подставляет стандартные значения на тех страницах, куда не попадают данные от других плагинов-провайдеров, или они пусты."
+PLG_RADICALMICRO_DEFAULT_DESCRIPTION = "Расширение плагина Radical Micro для установки значений части метаданных по умолчанию.<br/> Плагин подставляет стандартные значения на тех страницах, куда не попадают данные от других плагинов-провайдеров, или они пусты.<br/>Плагин подставляет данные в раздел Meta плагина."
